<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:padding="15dp"
    tools:context=".ui.detailUserActivity.DetailUserActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="103dp"
        android:contentDescription="@string/gambar_avatar"
        tools:src="@drawable/user1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="196dp"
       />

    <TextView
        android:id="@+id/username"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/Username"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/name" />

    <TextView
        android:id="@+id/descrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="36dp"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/name" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_repo_user"
        android:layout_below="@+id/descrip"
        />





</RelativeLayout>